some features layouts edited

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <link rel="shortcut icon" href="ababeel-logo.png" />
     <link href="styles.css" rel="stylesheet" type="text/css"/>
-    <link href="javascript.js" rel="javascript" type="text/js"/>
+    <script src="javascript.js" ></script>
+
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
@@ -45,32 +46,32 @@
 
     </nav>
     <section id="mediaFrame">
-        <header id="sHeader" style="padding:0.25em; font-size:4em; color:blue; text-align:center">
-            OneDrive - Cloud Storage
+        <header id="sHeader" class="content" style="text-align: left;" >
+          <b>Trainings: </b> <u><i>Cloud-Storage </i> </u>><u> <i>OneDrive</i></u>  
         </header>
         <article id="0">
 
-            <h1 id="header"></h1>
-            <p id="descript"></p>
+            <u><h1 id="header"  class="content" ></h1></u>
+            <p id="descript" class="content" ></p>
             <br />
-            <p>
+            <p  class="content" >
                 <strong>Title</strong> &emsp;&emsp;&emsp;<i id="Title"></i><br />
                 <strong>Duration</strong> &emsp;<i id="Duration"></i><br />
                 <strong>Level</strong> &emsp;&emsp;&ensp;<i id="Level"></i><br />
                 <strong>Cost</strong> &emsp;&emsp;&emsp;<i id="Cost"></i>Rs.<br />
             </p>
-            <p>
+            <p  class="content" >
                 <strong>Note:</strong>&emsp;<u>This course will save your progress, make sure you complete
                     this in one through.</u>
             </p>
         </article>
         <article id="1" class="articleDisplay">
 
-            <h1>Cloud Storage</h1>
-            <p>Cloud storage is online storage provided by company for users to store their data and access it with from
+            <h1  class="content" >Cloud Storage</h1>
+            <p  class="content" >Cloud storage is online storage provided by company for users to store their data and access it with from
                 anywhere in the world with internet access. </p>
             <br />
-            <p>
+            <p  class="content" >
                 <strong>Features</strong>
             <ul>
                 <li>Provides online storage</li>
