icons styles separated on styles sheet from inline styles

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <ol>
                 <li>
                     <h4>OneDrive</h4> <br />
-                    <img src="OneDrive Icons/1.png" height="120px" width="240px" style="margin:1em; clear:right" />
+                    <img src="OneDrive Icons/1.png"   />
                     <br />
                     <span>If you have signed in to the OneDrive sync app with both work or school and a personal
                         account, you will see two OneDrive sync icons.</span>
@@ -190,8 +190,8 @@
                 </li>
                 <li>
                     <h4>OneDrive Paused</h4> <br />
-                    <img src="OneDrive Icons/2.png" height="120px" width="140px" style="margin:1em; clear:right" />
-                    <img src="OneDrive Icons/3.png" height="120px" width="140px" style="margin:1em; clear:right" />
+                    <img src="OneDrive Icons/2.png" />
+                    <img src="OneDrive Icons/3.png" />
                     <br />
                     <span>The paused symbol over the OneDrive or OneDrive for work or school icon means your files are
                         not currently syncing.</span>
@@ -201,9 +201,9 @@
                 </li>
                 <li>
                     <h4>OneDrive Syncing</h4> <br />
-                    <img src="OneDrive Icons/4.png" height="120px" width="140px" style="margin:1em" />
-                    <img src="OneDrive Icons/5.png" height="120px" width="140px" style="margin:1em" />
-                    <img src="OneDrive Icons/6.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/4.png" />
+                    <img src="OneDrive Icons/5.png" />
+                    <img src="OneDrive Icons/6.png" />
                     <br />
                     <span>This includes when you are uploading files, or OneDrive is syncing new files from the cloud to
                         your PC.</span>
@@ -214,8 +214,8 @@
                 </li>
                 <li>
                     <h4>OneDrive Warning</h4> <br />
-                    <img src="OneDrive Icons/7.png" height="120px" width="140px" style="margin:1em" />
-                    <img src="OneDrive Icons/8.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/7.png"/>
+                    <img src="OneDrive Icons/8.png"  />
                     <br />
                     <span>If you see a yellow warning triangle over your OneDrive or OneDrive for work or school icon,
                         it means your account needs attention. </span>
@@ -224,7 +224,7 @@
                 </li>
                 <li>
                     <h4>Not Signed In</h4> <br />
-                    <img src="OneDrive Icons/9.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/9.png" />
                     <br />
                     <span>A grayed-out OneDrive icon with a line through it means you're not signed in, or OneDrive
                         setup hasn't completed. </span>
@@ -233,9 +233,9 @@
                 </li>
                 <li>
                     <h4>Cannot Sync</h4> <br />
-                    <img src="OneDrive Icons/10.png" height="120px" width="140px" style="margin:1em" />
-                    <img src="OneDrive Icons/11.png" height="120px" width="140px" style="margin:1em" />
-                    <img src="OneDrive Icons/12.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/10.png"  />
+                    <img src="OneDrive Icons/11.png"  />
+                    <img src="OneDrive Icons/12.png"  />
                     <br />
                     <span> A red circle with a white cross means that a file or folder cannot be synced. You'll see this
                         in File Explorer or on the OneDrive notification area icons.</span>
@@ -245,7 +245,7 @@
                 </li>
                 <li>
                     <h4>Account Blocked</h4> <br />
-                    <img src="OneDrive Icons/13.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/13.png" />
                     <br />
                     <span>If you see a red "no entry" style icon over your OneDrive icon, it means your account is
                         blocked.</span>
@@ -254,7 +254,7 @@
                 </li>
                 <li>
                     <h4>Files won't Sync</h4> <br />
-                    <img src="OneDrive Icons/14.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/14.png"  />
                     <br />
                     <span>It means your admin has blocked the sync of certain file types. It's most common to block
                         Outlook data files.</span>
@@ -263,7 +263,7 @@
                 </li>
                 <li>
                     <h4>People Icon</h4> <br />
-                    <img src="OneDrive Icons/15.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/15.png"  />
                     <br />
                     <span>If you see a "people" icon next to your OneDrive files or folders, this indicates the file or
                         folder has been shared with other people.</span>
@@ -272,7 +272,7 @@
                 </li>
                 <li>
                     <h4>Outlined OneDrive Icon</h4> <br />
-                    <img src="OneDrive Icons/16.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/16.png" />
                     <br />
                     <span>A blue cloud icon next to your OneDrive files or folders indicates that the file is only
                         available online. Online-only files don’t take up space on your computer.</span>
@@ -281,7 +281,7 @@
                 </li>
                 <li>
                     <h4>Outlined Green Tick</h4> <br />
-                    <img src="OneDrive Icons/17.png" height="120px" width="140px" style="margin:1em" />
+                    <img src="OneDrive Icons/17.png"  />
                     <br />
                     <span>When you open an online-only file, it downloads to your device and becomes a locally available
                         file. You can open a locally available file anytime, even without Internet access. </span>
@@ -301,17 +301,14 @@
                 </li>
 
             </ol>
-            <p>
-                <strong>Note:</strong>&emsp;<u>This course will save your progress, make sure you complete
-                    this in one through.</u>
-            </p>
+            
 
         </article>
         <article id="12" class="articleDisplay" style="text-align:center">
             <h1 id="header" style="padding:1.25em; font-size:4em; color:green">Congratulations</h1>
             <p id="descript" style="font-family:arial; color:seagreen">You have completed OneDrive-Cloud Storage
                 Training. Click button to close tab.</p>
-            <div style="text-align:center">
+            <div>
                 <button id="finish" class="Buttons" onclick="window.close()">
                     CLOSE TAB
                 </button>
